# micro-designer

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
misc/: multifocal-koehler-solver.ipynb
src/kmdouglass/: design.py
src/kmdouglass/udesigner/: __init__.py  dpm.py  mfki.py  udesigner.py
src/kmdouglass/udesigner/scripts/: udesign.py
src/kmdouglass/udesigner/templates/: mfki_design.html
templates/: design.html
