[tool.poetry]
name = "kmdouglass.udesigner"
version = "0.0.0"
description = "Design tools for microscopes"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "kmdouglass", from = "src" }
]

[tool.poetry.dependencies]
Jinja2 = "*"
matplotlib = "*"
python = "^3.8"

[tool.poetry.scripts]
udesign = "kmdouglass.udesigner.dpm:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
